# rag-mcp-server

./: .dockerignore  .gitignore  Dockerfile  README.md  config.toml.example  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
eval/: dataset.json
eval/corpus/: bash_scripting.md  docker_intro.md  git_basics.md  http_basics.md  kubernetes_pods.md  linux_filesystem.md  nginx_basics.md  postgresql_basics.md  python_basics.md  redis_basics.md  ssh_basics.md  systemd_services.md  terraform_basics.md
rag/: __init__.py  config.py  errors.py  eval.py  health.py  indexer.py  logging_config.py  metadata_db.py  parsers.py  runtime_state.py  server.py  store.py  tools.py  watcher.py
tests/: __init__.py  test_config.py  test_errors.py  test_eval.py  test_health.py  test_indexer.py  test_logging_config.py  test_metadata_db.py  test_offline.py  test_parsers.py  test_runtime_state.py  test_server.py  test_store.py  test_tools.py  test_watcher.py
