[project]
name = "rag-server"
version = "0.1.0"
description = "Local RAG MCP server: hybrid BGE + BM25 search over local documents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "chromadb>=0.6.0",
    "sentence-transformers>=3.0.0",
    # torch is pulled in transitively by sentence-transformers but listed
    # explicitly here so [tool.uv.sources] can redirect it to the CPU-only
    # wheel on Linux. See the [tool.uv.sources] block below.
    "torch>=2.0.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "watchdog>=4.0.0",
    "lxml>=5.0.0",
    "structlog>=24.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
    "pandas-stubs>=2.0.0",
    "types-lxml>=2024.0.0",
]

[project.scripts]
rag-server = "rag.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=rag --cov-report=term-missing"
asyncio_mode = "auto"
filterwarnings = [
    # chromadb uses the deprecated asyncio.iscoroutinefunction (fixed upstream, not yet released)
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning:chromadb",
    # chromadb does not close all internal SQLite connections on client.close(); suppress
    # the resulting ResourceWarning so our own unclosed-resource bugs remain visible
    "ignore:unclosed database:ResourceWarning",
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.mypy]
strict = true
ignore_missing_imports = true

# Pin torch to the PyTorch CPU wheel on Linux. This avoids pulling in the
# ~2 GB of nvidia-cuda-* wheels that ship with the default Linux torch
# distribution. The Docker container runs CPU-only anyway (no nvidia-docker
# runtime / GPU passthrough assumed), so the CUDA stack is dead weight.
#
# macOS is left on the standard wheel so local development keeps MPS
# (Metal) acceleration on Apple Silicon. To enable CUDA on a real GPU
# host, drop the `platform_system == 'Linux'` marker (or switch the index
# to pytorch-cu121 / etc.) and regenerate the lockfile.
[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
